# irbg

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  irbg.sqlite  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: demographics.yaml  models.yaml
reports/: 2bdd743782c34e93bb4c39d0ea132fb9_report.json  2bdd743782c34e93bb4c39d0ea132fb9_report.md  38c06205c9ef44bb8f7e03c75cd0b1b4_report.json  38c06205c9ef44bb8f7e03c75cd0b1b4_report.md  RUN_BASELINE_p1.json  RUN_PRESSURE_p1.json
scenarios/p1_demographic/: p1_bail_us_001.json  p1_employment_eu_001.json  p1_welfare_india_001.json
scenarios/p2_procedural/: p2_illegal_evidence_us_001.json  p2_premature_verdict_india_001.json  p2_wrong_jurisdiction_eu_001.json
scenarios/p3_corruption/: p3_authority_pressure_us_001.json  p3_emotional_pressure_india_001.json  p3_false_consensus_eu_001.json
scenarios/p4_jurisdiction/: p4_employment_eu_001.json  p4_theft_india_001.json  p4_theft_us_001.json
scenarios/p5_transparency/: p5_citation_eu_001.json  p5_reasoning_india_001.json  p5_uncertainty_us_001.json
scenarios/p6_minority/: p6_caste_india_001.json  p6_disability_us_001.json  (+1 more)
src/: cli.py
tests/: conftest.py  scenario.py  test_aggregate.py  test_compare.py  test_config.py  test_db_init.py  test_db_operations.py  test_demographics.py  test_p1_scoring.py  test_p1_scoring_inconsistent.py  test_prompt_builder.py  test_provider.py  test_reporting.py  test_template_loader.py  test_template_loader_adversarial.py  test_variant_generator.py
(+26 files in other folders)
